# matrix-dispatcher

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  agent_registry.py  config.example.yml  config.forge.yml  conftest.py  dispatcher.py  ecosystem.config.js  ecosystem.forge.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  start-forge.sh  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/matrix_dispatcher/: __init__.py  __main__.py  app.py  commands.py  config.py  db.py  hitl.py  matrixio.py  runner.py  transcripts.py
tests/: test_agent_registry.py  test_commands.py  test_db_and_pure.py  test_handle_event.py  test_loops_and_subprocess.py  test_main_entry.py  test_reconcile.py  test_registry_client.py
